z-index fix

--- a/DOTS_NAVBAR/DOTS_NAV.css
+++ b/DOTS_NAVBAR/DOTS_NAV.css
@@ -92,6 +92,7 @@
     position: fixed;
     width: 100%;
     border-bottom: 2px solid var(--nav_border_bottom);
+    z-index: 1;
 }
 
 .wrapper nav
