--- a/Dropdown Function/Dropdown.css
+++ b/Dropdown Function/Dropdown.css
@@ -42,6 +42,7 @@
   
   .dropdown {
     position: relative;
+    z-index: 0;
   }
   
   .dropdown__selected {
